Add consume-transform-produce-eos example